<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="?android:colorBackground">

    <ImageView
        android:id="@+id/login_image"
        android:layout_width="265dp"
        android:layout_height="265dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/login_image" />

    <TextView
        android:id="@+id/login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="34dp"
        android:fontFamily="@font/ubuntu_light"
        android:text="@string/login_title"
        android:textColor="?android:textColorPrimary"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_image" />

    <LinearLayout
        android:id="@+id/email_lin"
        android:layout_width="360dp"
        android:layout_height="56dp"
        android:layout_marginTop="25dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="@drawable/rounded_edit_text_background"
        android:paddingHorizontal="12dp"
        app:layout_constraintTop_toBottomOf="@+id/login_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/email_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            app:tint="@color/primary"
            app:srcCompat="@drawable/email_icon" />

        <EditText
            android:id="@+id/email_et"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="12dp"
            android:hint="@string/email"
            android:fontFamily="@font/ubuntu_light"
            android:textColor="?android:textColorPrimary"
            android:textColorHint="?android:textColorSecondary"
            android:background="@android:color/transparent"
            android:padding="0dp"
            android:textSize="16sp"
            android:inputType="textEmailAddress"/>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/password_lin"
        android:layout_width="360dp"
        android:layout_height="56dp"
        android:layout_marginTop="12dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="@drawable/rounded_edit_text_background"
        android:paddingHorizontal="12dp"
        app:layout_constraintTop_toBottomOf="@+id/email_lin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Иконка слева -->
        <ImageView
            android:id="@+id/password_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            app:tint="@color/primary"
            app:srcCompat="@drawable/password_icon" />

        <!-- Поле ввода -->
        <EditText
            android:id="@+id/password_et"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="12dp"
            android:hint="@string/password"
            android:fontFamily="@font/ubuntu_light"
            android:textColor="?android:textColorPrimary"
            android:textColorHint="?android:textColorSecondary"
            android:background="@android:color/transparent"
            android:padding="0dp"
            android:textSize="16sp"
            android:inputType="textPassword"/>

        <!-- Кнопка "показать/скрыть" -->
        <ImageButton
            android:id="@+id/show_pass_btn"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="@android:color/transparent"
            android:src="@drawable/baseline_visibility_off_24"
            app:tint="@color/primary"
            android:contentDescription="@string/show_password"/>
    </LinearLayout>

    <Button
        android:id="@+id/login_btn"
        android:layout_width="268dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/ubuntu_light"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_lin" />

    <LinearLayout
        android:id="@+id/go_to_register_activity_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_to_here"
            android:textColor="?android:textColorPrimary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:text="@string/sing_up"
            android:textColor="@color/blue" />
    </LinearLayout>

    <!-- Затемнение экрана -->
    <View
        android:id="@+id/loader_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#161519"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/loader"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:visibility="gone"
        android:src="@drawable/ic_loading"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>