<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="?android:colorBackground">

    <ImageButton
        android:id="@+id/sign_up_back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_round_arrow_back"
        android:backgroundTint="@android:color/transparent"
        app:tint="?android:textColorPrimary"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="14dp"
        android:layout_marginTop="24dp"/>

    <ImageView
        android:id="@+id/login_image"
        android:layout_width="265dp"
        android:layout_height="265dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/register_image" />

    <TextView
        android:id="@+id/login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="34dp"
        android:fontFamily="@font/ubuntu_medium"
        android:text="@string/sign_up"
        android:textColor="?android:textColorPrimary"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_image" />

    <LinearLayout
        android:id="@+id/username_lin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_title">

        <ImageView
            android:id="@+id/username_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            app:srcCompat="@drawable/username_icon"
            app:tint="?android:textColorSecondary" />

        <EditText
            android:id="@+id/username_et"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginStart="9dp"
            android:fontFamily="@font/ubuntu_light"
            android:hint="@string/username"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:textColor="?android:textColorPrimary"
            android:textColorHint="?android:textColorHint"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/email_lin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_lin">

        <ImageView
            android:id="@+id/email_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            app:srcCompat="@drawable/email_icon"
            app:tint="?android:textColorSecondary" />

        <EditText
            android:id="@+id/email_et"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginStart="9dp"
            android:fontFamily="@font/ubuntu_light"
            android:hint="@string/email"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:textColor="?android:textColorPrimary"
            android:textColorHint="?android:textColorHint"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/password_lin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_lin">

        <ImageView
            android:id="@+id/password_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            app:srcCompat="@drawable/password_icon"
            app:tint="?android:textColorSecondary" />

        <EditText
            android:id="@+id/password_et"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginStart="9dp"
            android:fontFamily="@font/ubuntu_light"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:textColor="?android:textColorPrimary"
            android:textColorHint="?android:textColorHint"
            android:textSize="16sp" />

    </LinearLayout>

    <Button
        android:id="@+id/sign_up_btn"
        android:layout_width="268dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/ubuntu_light"
        android:text="@string/sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_lin" />

    <!-- Затемнение экрана -->
    <View
        android:id="@+id/loader_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#161519"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/loader"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:visibility="gone"
        android:src="@drawable/ic_loading"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>